Fix alignment issues in forgot password in wallet section

--- a/stylesheets/_bchat.scss
+++ b/stylesheets/_bchat.scss
@@ -1808,7 +1808,7 @@ label {
         // width: 38%;
         width: 538px;
 
-        height: 417px;
+        // height: 417px;
         // background-color: #2d2d3b;
         background-color: var(--color-WalcontentBg);
         border-radius: 10px;
@@ -1827,7 +1827,7 @@ label {
             outline: none;
             resize: none;
             width: 435px;
-            height: 76px;
+            height: 126px;
             // background-color: #353543;
             background-color: var(--color-walInputBg);
 
